--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="user_name_edit_text">Your Name</string>
+    <string name="happy_question">Are You Happy?</string>
+    <string name="anwser_yes_button">Yes</string>
+    <string name="anwser_no_button">No</string>
 </resources>
